Update LessonProgressServiceTest.java